--- a/twentytwentyone-child/styleb.css
+++ b/twentytwentyone-child/styleb.css
@@ -8,44 +8,42 @@ Description: Twenty Twenty-One is a blank canvas for your ideas and it makes the
 Tags: one-column,accessibility-ready,custom-colors,custom-menu,custom-logo,editor-style,featured-images,footer-widgets,block-patterns,rtl-language-support,sticky-post,threaded-comments,translation-ready
 Version: 1.8.1692944804
 Updated: 2023-08-25 08:26:44
-
+​
 */
-
+/*header*/
 header {
   display: flex;
   justify-content: space-between;
   background: #ffffff;
+  height: 80px;
   overflow: hidden;
 }
-
+​
 nav ul {
   display: flex;
   justify-content: flex-end;
   align-items: center;
   list-style: none;
- }
-
+  height: 80px;
+}
+​
 /*
 nav ul li {
   height: 80px;
 }
 */
-
+​
 header .logo {
   display: flex;
   justify-content: flex-start;
-  width: 225px;
+  width: 80px;
   height: 40px;
   margin: 20px 20px;
   margin-left: 20px;
 }
-
-.menu-header-container, header nav ul {
-  height:100%
-}
-
+​
 /*commander*/
-header nav .commander a {
+#menu-item-329 a {
   font-family: Syne;
   font-size: 16px;
   font-weight: 700;
@@ -54,11 +52,11 @@ header nav .commander a {
   justify-content: space-around;
   align-items: center;
   background: #dc9f96;
-  padding: 40px 50px;
+  padding: 34px 50px 32px 50px;
 }
-
+​
 /*nous rencontrer*/
-header nav ul li a {
+#menu-item-330 a {
   font-family: Syne;
   color: black;
   font-size: 13px;
@@ -66,31 +64,31 @@ header nav ul li a {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  padding: 34px 50px 32px 50px;
+  padding: 35px 50px 32px 50px;
   height: 50px;
   text-decoration: none;
 }
-
-header nav ul li {
-  order:0;
+​menu-item-507 a {
+  font-family: Syne;
+  color: black;
+  font-size: 13px;
+  font-weight: 400;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding: 35px 50px 32px 50px;
+  height: 50px;
+  text-decoration: none;
 }
-header nav ul .adminmenu {
-  order:1;
-}
-
-header nav .commander {
-  order:99;
-}
-
 /*formulaire*/
-
+​
 .container {
   width: 100%;
   margin: 0 auto;
   max-width: 800px;
   align-items: center;
 }
-
+​
 .separation {
   width: 100%;
   max-width: 800px;
@@ -98,12 +96,12 @@ header nav .commander {
   background-color: white;
   margin: 60px auto;
 }
-
+​
 .qteboutons {
   display: flex;
   gap: 10px;
 }
-
+​
 .qte {
   display: flex;
   gap: 10px;
@@ -112,9 +110,9 @@ header nav .commander {
   display: flex;
 }
 body {
-  background-color: green;
+  background-color: #3B8E46;
 }
-
+​
 .ok {
   font-family: Syne;
   font-size: 15px;
@@ -128,7 +126,7 @@ body {
   height: 56px;
   border-radius: 5px;
 }
-
+​
 .number {
   font-family: Inter;
   border: 0;
@@ -145,7 +143,7 @@ body {
   border-top-right-radius: 0px;
   border-bottom-right-radius: 0px;
 }
-
+​
 .plusmoins {
   font-family: Syne;
   font-size: 20px;
@@ -157,28 +155,28 @@ body {
   border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
 }
-
+​
 .plus, .moins  {
   background:none;
   border: 0;
   height: 50%;
   padding:0 10px
 }
-
+​
 .separator {
   width: 100%;
   height: 1px;
   background-color: white;
 }
-
+​
 /*formulaire*/
-
+​
 .formulaire {
   display: flex;
   justify-content: space-around;
   padding-bottom: 30px;
 }
-
+​
 .formulaire .h3 {
   font-family: Syne;
   font-size: 30px;
@@ -186,22 +184,22 @@ body {
   line-height: 36px;
   padding: 60px 60px;
 }
-
+​
 .vosinformations {
   width: 50%;
 }
-
+​
 .ligne {
   width: 1px;
   background-color: white;
   margin: 20px 30px 25px 30px;
 }
-
+​
 .livraison {
   width: 50%;
   padding-bottom: 2em;
 }
-
+​
 .monbouton {
   text-align: center;
   color: #e0b9b4;
@@ -212,17 +210,8 @@ body {
   line-height: 37px;
   letter-spacing: 0em;
 }
-/*
- footer2 a {
-  display: flex;
-  align-items: center;
-  background-color: #FFFFFF;
-  height: 60px;
-  width : 100%;
-  }
-  */
-
-/*footer pb avec le point list style ne fo pas*/
+​
+/*footer*/
 #menu-item-331 a {
   display: flex;
   justify-content: center;
@@ -237,6 +226,7 @@ body {
   height: 60px;
   width: 100%;
 }
+​
 
 .wpforms-submit-container{
   text-align: center;
